testdata/cases/analyze/unsupported_marshal_type.expected
testdata/cases/analyze/unsupported_marshal_type.go:6:22: error[unsupported-marshal-type]: JSON cannot marshal values of type chan int
